# AIM_NLP

./: LICENSE  data_preprocessing.ipynb  disilbert.ipynb  pyproject.toml  review.ipynb
data/: synthetic_data.csv  test.csv  train.csv
data/cybersec/: README.md
data/cybersec/Junior hacker adaptive/: sandbox-11-useractions.json  sandbox-12-useractions.json  sandbox-13-useractions.json  sandbox-14-useractions.json  sandbox-15-useractions.json  sandbox-16-useractions.json  sandbox-17-useractions.json  sandbox-64-useractions.json  sandbox-74-useractions.json  sandbox-80-useractions.json
data/cybersec/Kobylka 3302/: sandbox-181-useractions.json  sandbox-183-useractions.json  sandbox-184-useractions.json  sandbox-189-useractions.json  sandbox-190-useractions.json  sandbox-192-useractions.json  sandbox-197-useractions.json  sandbox-205-useractions.json  topology.yml
data/cybersec/Secret laboratory/: sandbox-131-useractions.json
