[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["vera.kudrevskaia <vera.kudrevskaia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
torch = "^2.5.1"
scikit-learn = "^1.6.0"
transformers = "^4.47.1"
datasets = "^3.2.0"
matplotlib = "^3.10.0"
accelerate = "0.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
